--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "type": "module",
   "homepage": "https://github.com/writeralex/frontend-project-11#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "debug": "^4.3.4",
     "lodash": "^4.17.21"
   },
@@ -30,6 +31,8 @@
     "jest": "^29.0.1",
     "jest-cli": "^29.0.1",
     "npm-check-updates": "^16.0.6",
-    "simple-git-hooks": "^2.8.0"
+    "simple-git-hooks": "^2.8.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   }
 }
