--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/writeralex/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/writeralex/frontend-project-11/actions)",
   "main": "index.js",
+  "private": true,
   "scripts": {
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,12 +20,15 @@
   "type": "module",
   "homepage": "https://github.com/writeralex/frontend-project-11#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "debug": "^4.3.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@jest/globals": "^29.0.1",
+    "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.2",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -31,8 +36,13 @@
     "jest": "^29.0.1",
     "jest-cli": "^29.0.1",
     "npm-check-updates": "^16.0.6",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "simple-git-hooks": "^2.8.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
