--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/writeralex/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/writeralex/frontend-project-11/actions)",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "start": "webpack serve --mode development",
@@ -41,9 +40,8 @@
     "sass-loader": "^13.2.0",
     "simple-git-hooks": "^2.8.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.38.1",
+     "webpack-cli": "^4.7.2"
   },
   "keywords": []
 }
