--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.1",
     "jest-cli": "^27.1.1",
+    "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^3.2.1",
