--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "^7.15.4",
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.7.3",
     "debug": "^4.3.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -39,17 +39,18 @@
     "jest": "^27.1.1",
     "jest-cli": "^27.1.1",
     "mini-css-extract-plugin": "^2.7.2",
-    "postcss-loader": "^6.1.1",
+    "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^6.7.0",
-    "style-loader": "^3.2.1",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "npm-check-updates": "^11.8.5",
-    "sass": "^1.39.0",
-    "sass-loader": "^12.1.0"
+    "bootstrap": "^5.2.3",
+    "npm-check-updates": "^11.8.5"
   }
 }
