--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "webpack-package",
   "version": "0.1.0",
-  "description": "",
+  "description": "[![Actions Status](https://github.com/writeralex/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/writeralex/frontend-project-11/actions)",
   "scripts": {
-    "test": "jest --colors"
+
+    "start": "webpack serve",
+    
+    "build": "webpack",
+    
+    "clear": "rd /s /q dist"
+    
   },
   "repository": {
     "type": "git",
@@ -45,12 +51,13 @@
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
     "npm-check-updates": "^11.8.5"
-  }
+  },
+  "keywords": []
 }
