--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "i18next": "^22.4.6",
     "lodash": "^4.17.21",
